Character , locations , Glyphs missing images

--- a/content/glyphs.html
+++ b/content/glyphs.html
@@ -67,29 +67,122 @@
 
     </header>
     <div class="d-flex flex-column" id="glyphs-container">
-        <h1 class="text-center mt-5">GLYPHS</h1>
-        <ul class="list-unstyled w-75 align-self-center">
-            <li class="media">
-              <img src="https://via.placeholder.com/100.png?text=Glyphs" class="mr-3" alt="...">
+        <h1 class="text-center mt-5 arjulian">GLYPHS</h1>
+        <ul class="list-unstyled w-75 align-self-center" id="glyph-list">
+            <li class="media mb-5">
+              <!-- src="../assets/glyphs/Glyph-01.png" class="mr-3 " style="width: 200px;"-->
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3" >
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">TRUTH</h5>
+                Found scarred onto a dead Direskin in the caravan wrecks, and on Lily the spiderling girl's pendant.
               </div>
             </li>
-            <li class="media my-4">
-              <img src="https://via.placeholder.com/100.png?text=Glyphs" class="mr-3" alt="...">
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">FIRE or LIGHTNING</h5>
+                Found on a stick with a mechanism that creates a spark.
               </div>
             </li>
-            <li class="media">
-              <img src="https://via.placeholder.com/100.png?text=Glyphs" class="mr-3" alt="...">
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">WATER</h5>
+                Seen on a fancy waterskin that refills everyday.
               </div>
             </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">LIGHT (?)</h5>
+                Seen on a 'lightstick', given to Kalar by the Seer of the Song of High Town.
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">LIFE</h5>
+                Inside a weird poop-avocado pit, engraved on a crystal.
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">SUSTENANCE (?)</h5>
+                Food or otherwise?
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">NOT(?)</h5>
+                We think it means ‘not’, or in a way it means the inverse of what follows it
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">PERIOD</h5>
+                Literally that.
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">XXXX</h5>
+                XXXX
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">XXXX</h5>
+                XXXX
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3  ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">XXXX</h5>
+                XXXX
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">XXXX</h5>
+                XXXX
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">XXXX</h5>
+                XXXX
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">XXXX</h5>
+                XXXX
+              </div>
+            </li>
+            <li class="media mb-5">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">XXXX</h5>
+                XXXX
+              </div>
+            </li>
+            <li class="media sortme">
+              <img src="https://via.placeholder.com/100.jpg?text=Glyph" class="mr-3 ">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1 glyph-title">XXXX</h5>
+                XXXX
+              </div>
+            </li>
+            
           </ul>
     </div>
    
@@ -100,5 +193,16 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function() {
+        $('.sortme').sort(function(a, b) {
+          if (a.getElementsByClassName('glyph-title')[0].innerText < b.getElementsByClassName('glyph-title')[0].innerText) {
+            return -1;
+          } else {
+            return 1;
+          }
+        }).appendTo('#glyph-list');
+      });
+    </script>
 </body>
 </html>
