--- a/content/training.html
+++ b/content/training.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col d-flex flex-column" id="trained-abilities">
             <ul class="pl-0 shadow">
-                <li class="list-group-item list-group-item-action d-flex justify-content-between  trained"  id="trained-header">
+                <li class="list-group-item list-group-item-action d-flex justify-content-between  trained-title"  id="trained-header">
                     <h4><strong>Name</strong></h4>
                     <h4><strong>Cost</strong></h4>
                   </li>
