--- a/pergasha.html
+++ b/pergasha.html
@@ -69,48 +69,48 @@
     </header>
 
     
-    <h1 class="text-center mt-5">Welcome to Pergasha!</h1>
+    <h1 class="text-center mt-5 arjulian">Welcome to Pergasha!</h1>
     <div class="homepage-shortcuts d-flex justify-content-around flex-wrap">
 
         <a class="shortcuts text-reset text-decoration-none" href="content/races.html">
             <div><img class="shortcuts-icon" src="assets/icons/race-logo.svg"></div>
-            <h4>Races</h4>
+            <h4 class="arjulian">Races</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/classes.html">
             <div><img class="shortcuts-icon" src="assets/icons/class-logo.svg"></div> 
-            <h4>Classes</h4>
+            <h4 class="arjulian">Classes</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/items.html">
             <div><img class="shortcuts-icon" src="assets/icons/item-logo.svg"></div>
-            <h4>Items</h4>
+            <h4 class="arjulian">Items</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/psionics.html">
             <div><img class="shortcuts-icon" src="assets/icons/psionics-logo.svg"></div>
-            <h4>Psionics</h4>
+            <h4 class="arjulian">Psionics</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/feats.html">
             <div><img class="shortcuts-icon" src="assets/icons/feats-logo.svg"></div>
-            <h4>Feats</h4>
+            <h4 class="arjulian">Feats</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/training.html">
             <div><img class="shortcuts-icon" src="assets/icons/training-logo.svg"></div>
-            <h4>Training</h4>
+            <h4 class="arjulian">Training</h4>
         </a>
        <a class="shortcuts text-reset text-decoration-none" href="content/glyphs.html">
             <div><img class="shortcuts-icon" src="assets/icons/glyphs-logo.svg"></div>
-            <h4>Glyphs</h4>
+            <h4 class="arjulian">Glyphs</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/rules.html">
             <div><img class="shortcuts-icon" src="assets/icons/rules-logo.svg"></div>
-            <h4>Rules</h4>
+            <h4 class="arjulian">Rules</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/characters.html">
             <div><img class="shortcuts-icon pr-3" src="assets/icons/characters-logo.svg"></div>
-            <h4>Characters</h4>
+            <h4 class="arjulian">Characters</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/locations.html">
             <div><img class="shortcuts-icon" src="assets/icons/locations-logo.svg"></div>
-            <h4>Locations</h4>
+            <h4 class="arjulian">Locations</h4>
         </a>
     </div>  
 
