character update, start of rules

--- a/content/characters.html
+++ b/content/characters.html
@@ -176,7 +176,7 @@
     <div class="flip-card m-2 sand touched-kin sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/valar.jpg" style="height: 380px; width: 300px;" >
+          <img src="../assets/characters/valar-emp.png" style="height: 380px; width: 300px;" >
           <span class="character-name">Valar</span>
           <div class="character-tag text-center">
             <span class="badge badge-secondary tribe-tag">Sand Tribe</span>
@@ -194,7 +194,7 @@
     <div class="flip-card m-2 tribeless lizardfolk sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/jax.jpg" style="height: 380px; width: 300px;" >
+          <img src="../assets/characters/jax-emp.png" style="height: 380px; width: 300px;" >
           <span class="character-name">Jax</span>
           <div class="character-tag text-center">
             <span class="badge badge-secondary">Tribeless</span>
@@ -202,7 +202,7 @@
           </div>
         </div>
         <div class="flip-card-back">
-          <h4>Jax</h4>
+          <h4>Jaxzulas "Jax" Khal</h4>
           <i>Princess</i>
           <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
         </div>
@@ -342,7 +342,7 @@
           </div>
         </div>
         <div class="flip-card-back">
-          <h4>Matilla tonuk</h4>
+          <h4>Matilla Tonuk</h4>
           <p class="p-1" style="font-size: 0.9rem;">Ethy Tonuk's sister, she met the group during "The Search" when they saved Ethy and helped her as she was trapped after a rockslide.</p>
         </div>
       </div>
