--- a/content/locations.html
+++ b/content/locations.html
@@ -73,7 +73,7 @@
 
       <button type="button" class="btn btn-outline-secondary text-center mb-2 align-self-center" onclick="collapsingMap()" id="mapButton" style="box-shadow: none;" >Hide Map</button>
       <div class="d-flex mb-3 w-100 justify-content-center align-self-center">
-        <img src="../assets/WEB-VIEW-Pergasha.jpg" id="pergasha-map">
+        <img src="../assets/WEB-VIEW-Pergasha.jpg" class="mw-100" id="pergasha-map">
       </div>
       
 
