Jax character card update

--- a/content/characters.html
+++ b/content/characters.html
@@ -203,8 +203,8 @@
         </div>
         <div class="flip-card-back">
           <h4>Jaxzulas "Jax" Khal</h4>
-          <i>Princess</i>
-          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+          <i style="font-size: 0.9rem;">Future Chieftess of the Rising Fang Tribe </i>
+          <p class="p-1" style="font-size: 0.8rem;">Inspired by Bara's stories told in her youth, Jax grew up with a spirit of adventure that, in spite of her family's best efforts, never truly left her. Upon a second encounter with Bara, and the fateful howling from a distant wolf, she left the world and responsibilities of her tribe behind in search of adventure. Despite the near-constant wonder and amazement to be found in the realm outside the Broken Fingers, she has quickly learned that death looms around every corner and not everything is as it appears to be...</p>
         </div>
       </div>
     </div> 
