--- a/content/characters.html
+++ b/content/characters.html
@@ -19,7 +19,7 @@
 
         <nav class="navbar navbar-dark navbar-expand-lg">
             <div class="navbar-brand  mr-4">
-                <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
+                <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.jpg">
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -122,7 +122,7 @@
     <div class="flip-card m-2 gem pergashan sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/eoni.png" style="height: 380px; width: 300px;" alt="Eoni">
+          <img src="../assets/characters/eoni.jpg" style="height: 380px; width: 300px;" alt="Eoni">
           <span class="character-name">Eoni</span>
           <div class="character-tag text-center">
             <span class="badge badge-secondary tribe-tag">Gem Tribe</span>
@@ -139,7 +139,7 @@
     <div class="flip-card m-2 storm ormicans touched-kin sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/barashtu.png" style="height: 380px; width: 300px;" >
+          <img src="../assets/characters/barashtu.jpg" style="height: 380px; width: 300px;" >
           <span class="character-name">Barashtu</span>
           <div class="text-center">
             <span class="badge badge-success">Ormican</span>
@@ -158,7 +158,7 @@
     <div class="flip-card m-2 sand touched-kin sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/kalar.png" style="height: 380px; width: 300px;" >
+          <img src="../assets/characters/kalar.jpg" style="height: 380px; width: 300px;" >
           <span class="character-name">Kalar</span>
           <div class="character-tag text-center">
             <span class="badge badge-secondary tribe-tag">Sand Tribe</span>
@@ -176,7 +176,7 @@
     <div class="flip-card m-2 sand touched-kin sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/valar-emp.png" style="height: 380px; width: 300px;" >
+          <img src="../assets/characters/valar-emp.jpg" style="height: 380px; width: 300px;" >
           <span class="character-name">Valar</span>
           <div class="character-tag text-center">
             <span class="badge badge-secondary tribe-tag">Sand Tribe</span>
@@ -194,7 +194,7 @@
     <div class="flip-card m-2 tribeless lizardfolk sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/jax-emp.png" style="height: 380px; width: 300px;" >
+          <img src="../assets/characters/jax-emp.jpg" style="height: 380px; width: 300px;" >
           <span class="character-name">Jax</span>
           <div class="character-tag text-center">
             <span class="badge badge-secondary">Tribeless</span>
@@ -421,7 +421,7 @@
     <div class="flip-card m-2 nesters touched-kin council sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/chalise.png" style="height: 380px; width: 300px;" >
+          <img src="../assets/characters/chalise.jpg" style="height: 380px; width: 300px;" >
           <span class="character-name">Chalise</span>
           <div class="character-tag text-center">
             <span class="badge badge-success">Council</span>
