--- a/content/characters.html
+++ b/content/characters.html
@@ -19,7 +19,7 @@
 
         <nav class="navbar navbar-dark navbar-expand-lg">
             <div class="navbar-brand  mr-4">
-                <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.jpg">
+                <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
