--- a/content/glyphs.html
+++ b/content/glyphs.html
@@ -121,8 +121,8 @@
             <li class="media mb-5 pr-2 ">
               <img src="../assets/glyphs/ancient_g11.png" class="mr-3 ">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">PERIOD</h5>
-                Literally that.
+                <h5 class="mt-0 mb-1">PERIOD(?)</h5>
+                Seen in the middle of words as well as at the end of sentences.
               </div>
             </li>
             <li class="media mb-5 pr-2 ">
