--- a/content/psionics.html
+++ b/content/psionics.html
@@ -78,6 +78,7 @@
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="talent-filter" data-toggle="list" role="button">Talents</a>
         </div>
         <div class="col d-flex flex-column" id="psionics-display-section">
+            <h1 class="text-center mb-3  arjulian">Psionics</h2>
                 <table class="table-sm table-striped shadow w-75 align-self-center mb-5" id="psionics-table">
                   <tbody>
                     <tr>
