--- a/content/training.html
+++ b/content/training.html
@@ -78,14 +78,14 @@
         
                         <tr>
                         <td colspan="6" id='training-split' class="pb-3">
-                            <h5>Earning Training Points</h5>
+                            <h5 class="arjulian">Earning Training Points</h5>
                             <div>Training Points are earned by completing character arcs, pursuing side quests to uncover places of power or mysteries of Pergasha, exploring the world, and helping NPCs. These points are used to purchase a new feature such as feats and psionic abilities. Each player also receives one Training Point at 4th, 8th, 12th, 16th, and 19th levels.</div>
                         </td>
                         </tr>
                 
                         <tr>
                         <td class="pt-3" colspan="6">
-                            <h5>Spending Training Points</h5>
+                            <h5 class="arjulian">Spending Training Points</h5>
                             <div>Training Points can be spent when leveling up, with special trainers, at places of power, or at the GM’s discretion.</div>
                             <br>
                             <h6>Training Point Costs</h6>
