--- a/content/feats.html
+++ b/content/feats.html
@@ -17,7 +17,7 @@
 
     <header>
 
-        <nav class="navbar navbar-dark navbar-expand-lg">
+        <nav class="navbar navbar-dark navbar-expand-xl">
             <div class="navbar-brand  mr-4">
                 <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
             </div>
@@ -25,45 +25,53 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../pergasha.html">Home</a>
-                </li>
-                <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Player Options
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="classes.html">Classes</a>
-                      <a class="dropdown-item" href="races.html">Races</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="feats.html">Feats</a>
-                      <a class="dropdown-item" href="training.html">Training</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="psionics.html">Psionics</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      References
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="characters.html">Characters</a>
-                        <a class="dropdown-item" href="glyphs.html">Glyphs</a>
-                        <a class="dropdown-item" href="items.html">Items</a>
-                        <a class="dropdown-item" href="locations.html">Locations</a>
-                      </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="rules.html">Rules</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="admin.html">Admin</a>
-                </li> -->
-            </ul>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pergasha.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Player Options
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="classes.html">Classes</a>
+                        <a class="dropdown-item" href="races.html">Races</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="feats.html">Feats</a>
+                        <a class="dropdown-item" href="training.html">Training</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="psionics.html">Psionics</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        References
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="characters.html">Characters</a>
+                            <a class="dropdown-item" href="glyphs.html">Glyphs</a>
+                            <a class="dropdown-item" href="items.html">Items</a>
+                            <a class="dropdown-item" href="locations.html">Locations</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="rules.html">Rules</a>
+                    </li>
+                </ul>
+                <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
+                <div class="d-none" id="notlogged">
+                    <form class="form-inline">
+                        <div class="form-group form-group-sm">
+                            <input type="text" class="form-control form-control-sm mr-sm-2 login-input" id="username" placeholder="Username">
+                            <input type="password" class="form-control form-control-sm mr-sm-2 login-input" id="pwd" placeholder="Password">
+                            <button type="button" class="btn btn-warning btn-sm" id="loginbtn">Login</button>
+                        </div>
+                    </form>
+                    <input type="checkbox" id="showPwd" class="mr-1"  autocomplete="off"><span id="show-pwd-label">Show Password</span> 
+                </div>
             </div>
-          </nav>
+        </nav>
 
     </header>
 
@@ -86,9 +94,9 @@
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
 
-    <script src="../pergasha.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="../pergasha.js"></script>
 </body>
 </html>
