--- a/content/psionics.html
+++ b/content/psionics.html
@@ -17,7 +17,7 @@
 
     <header>
 
-        <nav class="navbar navbar-dark navbar-expand-lg">
+        <nav class="navbar navbar-dark navbar-expand-xl">
             <div class="navbar-brand  mr-4">
                 <img id="dreadful-logo" src="../assets/logos/dreadful_odysseys_pergasha_logo-dark_theme.png">
             </div>
@@ -25,7 +25,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="../pergasha.html">Home</a>
                 </li>
@@ -58,10 +58,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="rules.html">Rules</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="admin.html">Admin</a>
-                </li> -->
             </ul>
+            <button type="button" class="btn btn-warning d-none" id="logoutbtn">Logout</button>
+                <div class="d-none" id="notlogged">
+                    <form class="form-inline">
+                        <div class="form-group form-group-sm">
+                            <input type="text" class="form-control form-control-sm mr-sm-2 login-input" id="username" placeholder="Username">
+                            <input type="password" class="form-control form-control-sm mr-sm-2 login-input" id="pwd" placeholder="Password">
+                            <button type="button" class="btn btn-warning btn-sm" id="loginbtn">Login</button>
+                        </div>
+                    </form>
+                    <input type="checkbox" id="showPwd" class="mr-1"  autocomplete="off"><span id="show-pwd-label">Show Password</span> 
+                </div>
             </div>
           </nav>
 
@@ -870,9 +878,9 @@
         }
     </script>
 
-    <script src="../pergasha.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="../pergasha.js"></script>
 </body>
 </html>
