character bios + adding Nara

--- a/content/characters.html
+++ b/content/characters.html
@@ -141,8 +141,9 @@
           </div>
         </div>
         <div class="flip-card-back">
-          <h4>Eoni</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+          <h4>Eoni Nycis</h4>
+          <i>Artisan Monk </i>
+          <p class="p-1" style="font-size: 0.9rem;">Eoni is a quiet, contemplative monk on a mission. She brought prisoners on board Big Ben to bring to the Conclave but during the journey has found herself tied to an unusual mix of individuals. In particular, she now is Valar’s sponsor in his venture to seek independence from his clan. She has slowly opened herself to the others as truth about her sister comes to light. </p>
         </div>
       </div>
     </div> 
@@ -156,7 +157,7 @@
           <span class="character-name">Barashtu</span>
           <div class="text-center">
             <span class="badge badge-success">Ormican</span>
-            <span class="badge badge-secondary">Storm</span>
+            <span class="badge badge-secondary">Storm Tribe</span>
             <span class="badge badge-info">Touched-kin</span>
           </div>
         </div>
@@ -202,8 +203,8 @@
         </div>
         <div class="flip-card-back">
           <h4>Valar Nightwing</h4>
-          <i>Chicken</i>
-          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+          <i>Loyal Brother </i>
+          <p class="p-1" style="font-size: 0.9rem;">Valar has a musical aura that sways the hearts and minds of those around him. He feels deeply and has a well of power within him, but he is still naïve to the world. He has grown, though, and with this burgeoning confidence, who knows what he will accomplish or what songs he will create? </p>
         </div>
       </div>
     </div>
@@ -243,7 +244,8 @@
         </div>
         <div class="flip-card-back">
           <h4>Jade</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+          <i>Barashtu’s Once-Companion </i>
+          <p class="p-1" style="font-size: 0.9rem;">This Crowned Kin is quietly observant, mysterious, and slow to trust. She shares a unique bond with Barashtu, but her full story is kept hidden behind her sharp eyes. </p>
         </div>
       </div>
     </div> 
@@ -256,7 +258,7 @@
           <img class="logged-in-character" src="../assets/characters/fareyes.jpg" style="display: none; height: 380px; width: 300px;" >
           <span class="character-name">Wum'pung</span>
           <div class="character-tag text-center">
-            <span class="badge badge-secondary">Cloud</span>
+            <span class="badge badge-secondary">Cloud Tribe</span>
             <span class="badge badge-success">Council</span>
             <span class="badge badge-success">Seers</span>
             <span class="badge badge-info">Touched-kin</span>
@@ -265,7 +267,7 @@
         <div class="flip-card-back">
           <h4>Wum'pung Fareyes</h4>
           <i>High Seer</i>
-          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+          <p class="p-1" style="font-size: 0.9rem;">Old, blind, and a heavy smoker, this quirky Direfolk serves on the Council. He was born to the Cloud Tribe but his Sight has elevated him beyond tribal concerns. Vina Vor-Koraq introduced the party to Wum’pung at the Conclave after Kalar won the title of High Roaster. </p>
         </div>
       </div>
     </div> 
@@ -284,7 +286,8 @@
         </div>
         <div class="flip-card-back">
           <h4>Muno</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Eoni's prisoner, awaiting trial.</p>
+          <i>Delver Prisoner </i>
+          <p class="p-1" style="font-size: 0.9rem;">This Direfolk was captured along with two others for a serious crime. They were transported to the Conclave on Big Ben and await trial. He seemed fearful after an attack left one of the prisoners dead. </p>
         </div>
       </div>
     </div>
@@ -303,12 +306,13 @@
         </div>
         <div class="flip-card-back">
           <h4>Sashana</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Eoni's prisoner, awaiting trial.</p>
+          <i>Delver Prisoner </i>
+          <p class="p-1" style="font-size: 0.9rem;">This scarred female Touched-Kin was captured with two others for a serious crime. They were transported to the Conclave on Big Ben and await trial. Despite mysteriums and devices to restrict their ability to interact, this woman smirked knowingly after an attack left one of the prisoners dead.</p>
         </div>
       </div>
     </div>
 
-    <div class="flip-card m-2 delvers other sortme">
+    <div class="flip-card m-2 delvers touched-kin sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img class="not-logged-in-character" src="https://via.placeholder.com/300x380?text=Tukuk">
@@ -317,16 +321,18 @@
           <span class="character-name">Tukuk</span>
           <div class="character-tag text-center">
             <span class="badge badge-success">Delvers</span>
+            <span class="badge badge-info">Touched-kin</span>
           </div>
         </div>
         <div class="flip-card-back">
           <h4>Tukuk</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Eoni's prisoner, deceased. He was killed during an attack on Trik's caravan just before reaching the Conclave.</p>
+          <i>Delver Prisoner, Deceased </i>
+          <p class="p-1" style="font-size: 0.9rem;">This freakish, insectoid Touched-Kin was captured with two others for a serious crime. They were transported to the Conclave on Big Ben and await trial. It twitched and behaved erratically, but little is known of this individual since it was killed in an attack on Big Ben. </p>
         </div>
       </div>
     </div>
 
-    <div class="flip-card m-2 other drifters sortme">
+    <div class="flip-card m-2 touched-kin drifters sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img class="not-logged-in-character" src="https://via.placeholder.com/300x380?text=Mimi">
@@ -335,17 +341,18 @@
           <span class="character-name">Mimi</span>
           <div class="character-tag text-center">
             <span class="badge badge-success">Drifters</span>
+            <span class="badge badge-info">Touched-kin</span>
           </div>
         </div>
         <div class="flip-card-back">
           <h4>Mimi</h4>
-          <i>Furry Wife</i>
-          <p class="p-1" style="font-size: 0.9rem;">Trik's wife, she's a big Sunderball fan and seems to be a powerful telepath.</p>
+          <i>A Drifter’s Wife </i>
+          <p class="p-1" style="font-size: 0.9rem;">Mimi is a rare Touched Kin that has vulpine features, has a mysterium-tinkered arm, and seems to be a powerful telepath. She obsesses over Sunderball while she travels with her Drifter husband, Trik, aboard an unfathomably massive desert buffalo named Big Ben.  </p>
         </div>
       </div>
     </div>
 
-    <div class="flip-card m-2 other drifters sortme">
+    <div class="flip-card m-2 drifters touched-kin sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img class="not-logged-in-character" src="https://via.placeholder.com/300x380?text=Trik">
@@ -354,12 +361,13 @@
           <span class="character-name">Trik</span>
           <div class="character-tag text-center">
             <span class="badge badge-success">Drifters</span>
+            <span class="badge badge-info">Touched-kin</span>
           </div>
         </div>
         <div class="flip-card-back">
           <h4>Trik</h4>
-          <i>Mysterium Hoarder</i>
-          <p class="p-1" style="font-size: 0.9rem;">Trik is a well known drifter, mostly due to his choice of transportation; Big Ben a gigantic female buffalo/Yak/Furry Cow that eats rocks.</p>
+          <i>Drifter Extraordinaire </i>
+          <p class="p-1" style="font-size: 0.9rem;">A famous drifter, mysterium collector, and retired warrior with a mysterium-made leg, Trik has done much with his life. He leads one of the largest trade caravans and knows many important individuals. Despite his success, he is friendly and generous. He is an unusual Touched-Kin that could almost be mistaken for a miniature Lizardfolk. The only thing he adores more than his beloved gargantuan mount, Big Ben, is his snarky wife Mimi.  </p>
         </div>
       </div>
     </div>
@@ -367,18 +375,19 @@
     <div class="flip-card m-2 fire pergashan sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img class="not-logged-in-character" src="https://via.placeholder.com/300x380?text=Matilla">
+          <img class="not-logged-in-character" src="https://via.placeholder.com/300x380?text=Tonuk+Twins">
           <div class="centered arjulian not-logged-in-character">Log in to view character art</div>
           <img class="logged-in-character" src="../assets/characters/matilla.jpg" style="display: none; height: 380px; width: 300px;" >
-          <span class="character-name">Matilla</span>
+          <span class="character-name">Matilla & Ethy</span>
           <div class="character-tag text-center">
-            <span class="badge badge-secondary">Fire</span>
+            <span class="badge badge-secondary">Fire Tribe</span>
             <span class="badge badge-info">Pergashan</span>
           </div>
         </div>
         <div class="flip-card-back">
-          <h4>Matilla Tonuk</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Ethy Tonuk's sister, she met the group during "The Search" when they saved Ethy and helped her as she was trapped after a rockslide.</p>
+          <h4>Matilla & Ethy Tonuk</h4>
+          <i>Fire Pergashan Twins </i>
+          <p class="p-1" style="font-size: 0.8rem;">Ethy was gravely injured during The Search when she was not only struck by lightning during a Sundering Storm but also crushed by boulders. She was separated from the rest of her herd and, not wanting to shame herself and her family, asked for death. <br><br> Matilla is an unusually irreverent Pergashan who was trapped behind a rockslide. For her and her sister’s rescue, she is grateful and promised to repay the group should they meet again. </p>
         </div>
       </div>
     </div>
@@ -392,13 +401,14 @@
           <span class="character-name">Jurani</span>
           <div class="character-tag text-center">
             <span class="badge badge-success">Inquisitors</span>
-            <span class="badge badge-secondary">Gem</span>
+            <span class="badge badge-secondary">Gem Tribe</span>
             <span class="badge badge-info">Pergashan</span>
           </div>
         </div>
         <div class="flip-card-back">
           <h4>Jurani Vor-Dorin</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+          <i>High Inquisitor Apprentice </i>
+          <p class="p-1" style="font-size: 0.9rem;">Inquisitor Vor-Dorin is a solemn, formal Gem Pergashan that Eoni met while turning over prisoners to the Privy Council.  </p>
         </div>
       </div>
     </div>
@@ -417,7 +427,8 @@
         </div>
         <div class="flip-card-back">
           <h4>Hako Um Beeki</h4>
-          <p class="p-1" style="font-size: 0.9rem;">One of Rix's goons.</p>
+          <i>Weapon-bearer to Rix Saveio </i>
+          <p class="p-1" style="font-size: 0.9rem;">This strong, quiet Lizardfolk is never far from Rix’s side. He obeys commands but is not deliberately cruel. </p>
         </div>
       </div>
     </div>
@@ -436,7 +447,8 @@
         </div>
         <div class="flip-card-back">
           <h4>Rix Saveio</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Former contender for Jax's hand. Kind of a prick.</p>
+          <i>Spurned Suitor </i>
+          <p class="p-1" style="font-size: 0.9rem;">It was revealed that Rix, a powerful Lizardfolk expected to become the leader of his clan, was once Jax’s suitor. He was brusque and belittled Jax openly, clearly still angry at the outcome of their courtship as he believes he was cheated. </p>
         </div>
       </div>
     </div>
@@ -455,8 +467,8 @@
           </div>
         </div>
         <div class="flip-card-back">
-          <h4>Avara Sh'ar of Hightown</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Seer to the Song of Hightown.</p>
+          <h4>Avara Sha'ar of Hightown</h4>
+          <p class="p-1" style="font-size: 0.9rem;">Avara is a blind Sand Pergashan who serves as Seer to the Song of Hightown. She seems to be able to control her visions more than the average Seer, making her a powerful ally to the Song. Avara’s demeanor can be haughty at times, but she is protective of the Song and serves her interests. She assists the Song in her search for information regarding glyphs from an ancient, unknown language that recently have been making appearances across Pergasha. </p>
         </div>
       </div>
     </div>
@@ -477,7 +489,7 @@
         <div class="flip-card-back">
           <h4>Chalise Lightwing</h4>
           <i>Song of Hightown</i>
-          <p class="p-1" style="font-size: 0.9rem;">Leader of Hightown, used to not be able to fly, obscessed with the ancient language.</p>
+          <p class="p-1" style="font-size: 0.9rem;">As Song of Hightown, Chalise rules over the growing and beautiful canopy city in mesas of The Nest. This Feathered Kin was born mute and after a bad accident, was unable to fly. Somehow, she found a way to fly and gained a voice after her Proving. Chalise told the party that her Proven name, like Eoni’s, was in the form of glyphs and not sound. She is notoriously good-humored with a deep interest in ancient glyphs and languages. </p>
         </div>
       </div>
     </div>
@@ -490,14 +502,14 @@
           <img class="logged-in-character" src="../assets/characters/vina.jpg" style="display: none; height: 380px; width: 300px;" >
           <span class="character-name">Vina</span>
           <div class="character-tag text-center">
-            <span class="badge badge-secondary">Sand</span>
+            <span class="badge badge-secondary">Sand Tribe</span>
             <span class="badge badge-info">Pergashan</span>
           </div>
         </div>
         <div class="flip-card-back">
           <h4>Vina Vor-Koraq</h4>
-          <i>Sere</i>
-          <p class="p-1" style="font-size: 0.9rem;">Kalar's sponsor at the Conclave.</p>
+          <i>Sere of the Sand Falcons </i>
+          <p class="p-1" style="font-size: 0.9rem;">Vina is a kind-hearted but influential Sand Sere who has agreed to sponsor and assist Kalar in his venture for independence. She is a friend of Trik and fellow Drifter, and Valar observed Vina at the Conclave markets. Her generosity and respectful behavior were surprising. </p>
         </div>
       </div>
     </div>
@@ -511,14 +523,14 @@
           <span class="character-name">Xianetta</span>
           <div class="character-tag text-center">
             <span class="badge badge-success">Council</span>
-            <span class="badge badge-secondary">Storm</span>
+            <span class="badge badge-secondary">Storm Tribe</span>
             <span class="badge badge-info">Pergashan</span>
           </div>
         </div>
         <div class="flip-card-back">
           <h4>Xianetta Stormslayer Vor-Ettik</h4>
-          <i>Thrane</i>
-          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+          <i>Thrane of the Storm Tribe </i>
+          <p class="p-1" style="font-size: 0.9rem;">Xianetta is a regal Pergashan who is acquaintances with Vina Vor-Koraq. She was socializing with Vina, Wum’pung, and others at the Conclave. </p>
         </div>
       </div>
     </div>
@@ -538,7 +550,28 @@
         </div>
         <div class="flip-card-back">
           <h4>Vi'Qwame</h4>
-          <p class="p-1" style="font-size: 0.9rem;">Strange individual encountered during "The Search". Seems to appear near places of power and to know a lot about them.</p>
+          <i>Mysterious Trainer </i>
+          <p class="p-1" style="font-size: 0.9rem;">An enigmatic, jolly wanderer was first encountered during The Search. He claims that he appears near places of power and has a great deal of knowledge about them, among other talents. If you see Vi’Qwame, prepare for confusing answers and bizarre tests of your worth. </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="flip-card m-2 gem pergashan sortme">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img class="not-logged-in-character" src="https://via.placeholder.com/300x380?text=Nara">
+          <div class="centered arjulian not-logged-in-character">Log in to view character art</div>
+          <img class="logged-in-character" src="../assets/characters/nara.jpg" style="display: none; height: 380px; width: 300px;" >
+          <span class="character-name">Nara</span>
+          <div class="character-tag text-center">
+            <span class="badge badge-secondary">Gem Tribe</span>
+            <span class="badge badge-info">Pergashan</span>
+          </div>
+        </div>
+        <div class="flip-card-back">
+          <h4>Nara Nycis</h4>
+          <i>Lost Twin </i>
+          <p class="p-1" style="font-size: 0.9rem;">Nara is Eoni’s beautiful, lost twin sister. Eoni was certain that her sister was dead, and her body used as psi-crystals. She sought revenge and justice for Nara, but during The Search, Eoni learned that Nara may not be dead after all.  </p>
         </div>
       </div>
     </div>
