--- a/content/rules.html
+++ b/content/rules.html
@@ -78,7 +78,7 @@
 
     <div class="container-fluid pr-5 pt-2" id="rules-container">
         <div class="row">
-          <nav class="nav nav-pills col-sm-2 col-4 sticky-top align-self-start" id="myScrollspy">
+          <nav class="nav nav-pills col-sm-2 col-4 sticky-top align-self-start" id="myScrollspy" style="max-width: 300px;">
             <ol type="I" class="flex-column">
               <li class="nav-item">
                 <a class="nav-link active" href="#section1">Dreadful Options in Pergasha</a>
