Update two classes, new feats/ change rules layout

--- a/content/characters.html
+++ b/content/characters.html
@@ -128,7 +128,7 @@
   <div class="row justify-content-center mt-3" id="cards-container">
     <h2 class="arjulian" id="noresult" style="display: none;">The party hasn't met any character matching your search.</h2>
 
-    <div class="flip-card m-2 gem pergashan sortme">
+    <div class="flip-card m-2 gem pergashan delvers sortme">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img class="not-logged-in-character" src="https://via.placeholder.com/300x380?text=Eoni">
@@ -136,6 +136,7 @@
           <img class="logged-in-character" src="../assets/characters/eoni.jpg" style="display: none; height: 380px; width: 300px;" alt="Eoni">
           <span class="character-name">Eoni</span>
           <div class="character-tag text-center">
+            <span class="badge badge-success">Delvers</span>
             <span class="badge badge-secondary tribe-tag">Gem Tribe</span>
             <span class="badge badge-info race-tag">Pergashan</span>
           </div>
